yacc.output
Terminals which are not used

   ASSERT
   BYVALUE
   CAST
   CONST
   ENUM
   FUTURE
   GENERIC
   GOTO
   INNER
   OPERATOR
   OUTER
   REST
   VAR
   INTEGER_VALUE
   LONG_VALUE
   N_ID
   FLOAT_VALUE
   CHAR_VALUE
   STRING_VALUE


Grammar

    0 $accept: CompilationUnit $end

    1 TypeSpecifier: TypeName
    2              | TypeName Dims

    3 TypeName: PrimitiveType
    4         | QualifiedName

    5 ClassNameList: QualifiedName
    6              | ClassNameList COMMA QualifiedName

    7 PrimitiveType: BOOLEAN
    8              | CHAR
    9              | BYTE
   10              | SHORT
   11              | INT
   12              | LONG
   13              | FLOAT
   14              | DOUBLE
   15              | VOID

   16 SemiColons: SEMICOLON
   17           | SemiColons SEMICOLON

   18 CompilationUnit: ProgramFile

   19 ProgramFile: PackageStatement ImportStatements TypeDeclarations
   20            | PackageStatement ImportStatements
   21            | PackageStatement TypeDeclarations
   22            | ImportStatements TypeDeclarations
   23            | PackageStatement
   24            | ImportStatements
   25            | TypeDeclarations

   26 PackageStatement: PACKAGE QualifiedName SemiColons

   27 TypeDeclarations: TypeDeclarationOptSemi
   28                 | TypeDeclarations TypeDeclarationOptSemi

   29 TypeDeclarationOptSemi: TypeDeclaration
   30                       | TypeDeclaration SemiColons

   31 ImportStatements: ImportStatement
   32                 | ImportStatements ImportStatement

   33 ImportStatement: IMPORT QualifiedName SemiColons
   34                | IMPORT QualifiedName POINT MULT SemiColons

   35 QualifiedName: IDENTIFIER
   36              | QualifiedName POINT IDENTIFIER

   37 TypeDeclaration: ClassHeader OPEN_D FieldDeclarations CLOSE_D
   38                | ClassHeader OPEN_D CLOSE_D

   39 ClassHeader: Modifiers ClassWord IDENTIFIER Extends Interfaces
   40            | Modifiers ClassWord IDENTIFIER Extends
   41            | Modifiers ClassWord IDENTIFIER Interfaces
   42            | ClassWord IDENTIFIER Extends Interfaces
   43            | Modifiers ClassWord IDENTIFIER
   44            | ClassWord IDENTIFIER Extends
   45            | ClassWord IDENTIFIER Interfaces
   46            | ClassWord IDENTIFIER

   47 Modifiers: Modifier
   48          | Modifiers Modifier

   49 Modifier: ABSTRACT
   50         | FINAL
   51         | PUBLIC
   52         | PROTECTED
   53         | PRIVATE
   54         | STATIC
   55         | TRANSIENT
   56         | VOLATILE
   57         | NATIVE
   58         | SYNCHRONIZED

   59 ClassWord: CLASS
   60          | INTERFACE

   61 Interfaces: IMPLEMENTS ClassNameList

   62 FieldDeclarations: FieldDeclarationOptSemi
   63                  | FieldDeclarations FieldDeclarationOptSemi

   64 FieldDeclarationOptSemi: FieldDeclaration
   65                        | FieldDeclaration SemiColons

   66 FieldDeclaration: FieldVariableDeclaration SEMICOLON
   67                 | MethodDeclaration
   68                 | ConstructorDeclaration
   69                 | StaticInitializer
   70                 | NonStaticInitializer
   71                 | TypeDeclaration

   72 FieldVariableDeclaration: Modifiers TypeSpecifier VariableDeclarators
   73                         | TypeSpecifier VariableDeclarators

   74 VariableDeclarators: VariableDeclarator
   75                    | VariableDeclarators COMMA VariableDeclarator

   76 VariableDeclarator: DeclaratorName
   77                   | DeclaratorName ASSIGN VariableInitializer

   78 VariableInitializer: Expression
   79                    | OPEN_D CLOSE_D
   80                    | OPEN_D ArrayInitializers CLOSE_D

   81 ArrayInitializers: VariableInitializer
   82                  | ArrayInitializers COMMA VariableInitializer
   83                  | ArrayInitializers COMMA

   84 MethodDeclaration: Modifiers TypeSpecifier MethodDeclarator Throws MethodBody
   85                  | Modifiers TypeSpecifier MethodDeclarator MethodBody
   86                  | TypeSpecifier MethodDeclarator Throws MethodBody
   87                  | TypeSpecifier MethodDeclarator MethodBody

   88 MethodDeclarator: DeclaratorName OPEN_B ParameterList CLOSE_B
   89                 | DeclaratorName OPEN_B CLOSE_B
   90                 | MethodDeclarator OP_DIM

   91 ParameterList: Parameter
   92              | ParameterList COMMA Parameter

   93 Parameter: TypeSpecifier DeclaratorName
   94          | FINAL TypeSpecifier DeclaratorName

   95 DeclaratorName: IDENTIFIER
   96               | DeclaratorName OP_DIM

   97 Throws: THROWS ClassNameList

   98 MethodBody: Block
   99           | SEMICOLON

  100 ConstructorDeclaration: Modifiers ConstructorDeclarator Throws Block
  101                       | Modifiers ConstructorDeclarator Block
  102                       | ConstructorDeclarator Throws Block
  103                       | ConstructorDeclarator Block

  104 ConstructorDeclarator: IDENTIFIER OPEN_B ParameterList CLOSE_B
  105                      | IDENTIFIER OPEN_B CLOSE_B

  106 StaticInitializer: STATIC Block

  107 NonStaticInitializer: Block

  108 Extends: EXTENDS TypeName
  109        | Extends COMMA TypeName

  110 Block: OPEN_D LocalVariableDeclarationsAndStatements CLOSE_D
  111      | OPEN_D CLOSE_D

  112 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationOrStatement
  113                                       | LocalVariableDeclarationsAndStatements LocalVariableDeclarationOrStatement

  114 LocalVariableDeclarationOrStatement: LocalVariableDeclarationStatement
  115                                    | Statement

  116 LocalVariableDeclarationStatement: TypeSpecifier VariableDeclarators SEMICOLON
  117                                  | FINAL TypeSpecifier VariableDeclarators SEMICOLON

  118 Statement: EmptyStatement
  119          | LabelStatement
  120          | ExpressionStatement SEMICOLON
  121          | SelectionStatement
  122          | IterationStatement
  123          | JumpStatement
  124          | GuardingStatement
  125          | Block

  126 EmptyStatement: SEMICOLON

  127 LabelStatement: IDENTIFIER COLON
  128               | CASE ConstantExpression COLON
  129               | DEFAULT COLON

  130 ExpressionStatement: Expression

  131 SelectionStatement: IF OPEN_B Expression CLOSE_B Statement
  132                   | IF OPEN_B Expression CLOSE_B Statement ELSE Statement
  133                   | SWITCH OPEN_B Expression CLOSE_B Block

  134 IterationStatement: WHILE OPEN_B Expression CLOSE_B Statement
  135                   | DO Statement WHILE OPEN_B Expression CLOSE_B SEMICOLON
  136                   | FOR OPEN_B ForInit ForExpr ForIncr CLOSE_B Statement
  137                   | FOR OPEN_B ForInit ForExpr CLOSE_B Statement

  138 ForInit: ExpressionStatements SEMICOLON
  139        | LocalVariableDeclarationStatement
  140        | SEMICOLON

  141 ForExpr: Expression SEMICOLON
  142        | SEMICOLON

  143 ForIncr: ExpressionStatements

  144 ExpressionStatements: ExpressionStatement
  145                     | ExpressionStatements COMMA ExpressionStatement

  146 JumpStatement: BREAK IDENTIFIER SEMICOLON
  147              | BREAK SEMICOLON
  148              | CONTINUE IDENTIFIER SEMICOLON
  149              | CONTINUE SEMICOLON
  150              | RETURN Expression SEMICOLON
  151              | RETURN SEMICOLON
  152              | THROW Expression SEMICOLON

  153 GuardingStatement: SYNCHRONIZED OPEN_B Expression CLOSE_B Statement
  154                  | TRY Block Finally
  155                  | TRY Block Catches
  156                  | TRY Block Catches Finally

  157 Catches: Catch
  158        | Catches Catch

  159 Catch: CatchHeader Block

  160 CatchHeader: CATCH OPEN_B TypeSpecifier IDENTIFIER CLOSE_B
  161            | CATCH OPEN_B TypeSpecifier CLOSE_B

  162 Finally: FINALLY Block

  163 PrimaryExpression: QualifiedName
  164                  | NotJustName

  165 NotJustName: SpecialName
  166            | NewAllocationExpression
  167            | ComplexPrimary

  168 ComplexPrimary: OPEN_B Expression CLOSE_B
  169               | ComplexPrimaryNoParenthesis

  170 ComplexPrimaryNoParenthesis: LITERAL
  171                            | BOOLLIT
  172                            | ArrayAccess
  173                            | FieldAccess
  174                            | MethodCall

  175 ArrayAccess: QualifiedName OPEN Expression CLOSE
  176            | ComplexPrimary OPEN Expression CLOSE

  177 FieldAccess: NotJustName POINT IDENTIFIER
  178            | RealPostfixExpression POINT IDENTIFIER
  179            | QualifiedName POINT THIS
  180            | QualifiedName POINT CLASS
  181            | PrimitiveType POINT CLASS

  182 MethodCall: MethodAccess OPEN_B ArgumentList CLOSE_B
  183           | MethodAccess OPEN_B CLOSE_B

  184 MethodAccess: ComplexPrimaryNoParenthesis
  185             | SpecialName
  186             | QualifiedName

  187 SpecialName: THIS
  188            | SUPER
  189            | JNULL

  190 ArgumentList: Expression
  191             | ArgumentList COMMA Expression

  192 NewAllocationExpression: PlainNewAllocationExpression
  193                        | QualifiedName POINT PlainNewAllocationExpression

  194 PlainNewAllocationExpression: ArrayAllocationExpression
  195                             | ClassAllocationExpression
  196                             | ArrayAllocationExpression OPEN_D CLOSE_D
  197                             | ClassAllocationExpression OPEN_D CLOSE_D
  198                             | ArrayAllocationExpression OPEN_D ArrayInitializers CLOSE_D
  199                             | ClassAllocationExpression OPEN_D FieldDeclarations CLOSE_D

  200 ClassAllocationExpression: NEW TypeName OPEN_B ArgumentList CLOSE_B
  201                          | NEW TypeName OPEN_B CLOSE_B

  202 ArrayAllocationExpression: NEW TypeName DimExprs Dims
  203                          | NEW TypeName DimExprs
  204                          | NEW TypeName Dims

  205 DimExprs: DimExpr
  206         | DimExprs DimExpr

  207 DimExpr: OPEN Expression CLOSE

  208 Dims: OP_DIM
  209     | Dims OP_DIM

  210 PostfixExpression: PrimaryExpression
  211                  | RealPostfixExpression

  212 RealPostfixExpression: PostfixExpression OP_INC
  213                      | PostfixExpression OP_DEC

  214 UnaryExpression: OP_INC UnaryExpression
  215                | OP_DEC UnaryExpression
  216                | ArithmeticUnaryOperator CastExpression
  217                | LogicalUnaryExpression

  218 LogicalUnaryExpression: PostfixExpression
  219                       | LogicalUnaryOperator UnaryExpression

  220 LogicalUnaryOperator: DURA
  221                     | EXC_MARK

  222 ArithmeticUnaryOperator: PLUS
  223                        | MINUS

  224 CastExpression: UnaryExpression
  225               | OPEN_B PrimitiveTypeExpression CLOSE_B CastExpression
  226               | OPEN_B ClassTypeExpression CLOSE_B CastExpression
  227               | OPEN_B Expression CLOSE_B LogicalUnaryExpression

  228 PrimitiveTypeExpression: PrimitiveType
  229                        | PrimitiveType Dims

  230 ClassTypeExpression: QualifiedName Dims

  231 MultiplicativeExpression: CastExpression
  232                         | MultiplicativeExpression MULT CastExpression
  233                         | MultiplicativeExpression DIV CastExpression
  234                         | MultiplicativeExpression MODULE CastExpression

  235 AdditiveExpression: MultiplicativeExpression
  236                   | AdditiveExpression PLUS MultiplicativeExpression
  237                   | AdditiveExpression MINUS MultiplicativeExpression

  238 ShiftExpression: AdditiveExpression
  239                | ShiftExpression OP_SHL AdditiveExpression
  240                | ShiftExpression OP_SHR AdditiveExpression
  241                | ShiftExpression OP_SHRR AdditiveExpression

  242 RelationalExpression: ShiftExpression
  243                     | RelationalExpression LESS ShiftExpression
  244                     | RelationalExpression GREATER ShiftExpression
  245                     | RelationalExpression OP_LE ShiftExpression
  246                     | RelationalExpression OP_GE ShiftExpression
  247                     | RelationalExpression INSTANCEOF TypeSpecifier

  248 EqualityExpression: RelationalExpression
  249                   | EqualityExpression OP_EQ RelationalExpression
  250                   | EqualityExpression OP_NE RelationalExpression

  251 AndExpression: EqualityExpression
  252              | AndExpression AND EqualityExpression

  253 ExclusiveOrExpression: AndExpression
  254                      | ExclusiveOrExpression XOR AndExpression

  255 InclusiveOrExpression: ExclusiveOrExpression
  256                      | InclusiveOrExpression OR ExclusiveOrExpression

  257 ConditionalAndExpression: InclusiveOrExpression
  258                         | ConditionalAndExpression OP_LAND InclusiveOrExpression

  259 ConditionalOrExpression: ConditionalAndExpression
  260                        | ConditionalOrExpression OP_LOR ConditionalAndExpression

  261 ConditionalExpression: ConditionalOrExpression
  262                      | ConditionalOrExpression QUES_MARK Expression COLON ConditionalExpression

  263 AssignmentExpression: ConditionalExpression
  264                     | UnaryExpression AssignmentOperator AssignmentExpression

  265 AssignmentOperator: ASSIGN
  266                   | ASS_MUL
  267                   | ASS_DIV
  268                   | ASS_MOD
  269                   | ASS_ADD
  270                   | ASS_SUB
  271                   | ASS_SHL
  272                   | ASS_SHR
  273                   | ASS_SHRR
  274                   | ASS_AND
  275                   | ASS_XOR
  276                   | ASS_OR

  277 Expression: AssignmentExpression

  278 ConstantExpression: ConditionalExpression


Terminals, with rules where they appear

$end (0) 0
error (256)
ABSTRACT (258) 49
ASSERT (259)
BOOLEAN (260) 7
BREAK (261) 146 147
BYVALUE (262)
CASE (263) 128
CAST (264)
CATCH (265) 160 161
CLASS (266) 59 180 181
CONST (267)
CONTINUE (268) 148 149
DEFAULT (269) 129
DO (270) 135
ENUM (271)
EXTENDS (272) 108
FINAL (273) 50 94 117
FINALLY (274) 162
FOR (275) 136 137
FUTURE (276)
GENERIC (277)
GOTO (278)
IF (279) 131 132
IMPLEMENTS (280) 61
IMPORT (281) 33 34
INNER (282)
INSTANCEOF (283) 247
INTERFACE (284) 60
NATIVE (285) 57
NEW (286) 200 201 202 203 204
JNULL (287) 189
OPERATOR (288)
OUTER (289)
PACKAGE (290) 26
PRIVATE (291) 53
PROTECTED (292) 52
PUBLIC (293) 51
REST (294)
RETURN (295) 150 151
STATIC (296) 54 106
SUPER (297) 188
SWITCH (298) 133
SYNCHRONIZED (299) 58 153
THIS (300) 179 187
THROW (301) 152
THROWS (302) 97
TRANSIENT (303) 55
TRY (304) 154 155 156
VAR (305)
VOID (306) 15
VOLATILE (307) 56
WHILE (308) 134 135
OP_INC (309) 212 214
OP_DEC (310) 213 215
OP_SHL (311) 239
OP_SHR (312) 240
OP_SHRR (313) 241
OP_GE (314) 246
OP_LE (315) 245
OP_EQ (316) 249
OP_NE (317) 250
OP_LAND (318) 258
OP_LOR (319) 260
OP_DIM (320) 90 96 208 209
ASS_MUL (321) 266
ASS_DIV (322) 267
ASS_MOD (323) 268
ASS_ADD (324) 269
ASS_SUB (325) 270
ASS_SHL (326) 271
ASS_SHR (327) 272
ASS_SHRR (328) 273
ASS_AND (329) 274
ASS_XOR (330) 275
ASS_OR (331) 276
OPEN_D (332) 37 38 79 80 110 111 196 197 198 199
CLOSE_D (333) 37 38 79 80 110 111 196 197 198 199
OPEN_B (334) 88 89 104 105 131 132 133 134 135 136 137 153 160 161
    168 182 183 200 201 225 226 227
CLOSE_B (335) 88 89 104 105 131 132 133 134 135 136 137 153 160 161
    168 182 183 200 201 225 226 227
OPEN (336) 175 176 207
CLOSE (337) 175 176 207
SEMICOLON (338) 16 17 66 99 116 117 120 126 135 138 140 141 142 146
    147 148 149 150 151 152
COLON (339) 127 128 129 262
POINT (340) 34 36 177 178 179 180 181 193
COMMA (341) 6 75 82 83 92 109 145 191
PLUS (342) 222 236
MINUS (343) 223 237
MULT (344) 34 232
DIV (345) 233
AND (346) 252
OR (347) 256
QUES_MARK (348) 262
EXC_MARK (349) 221
MODULE (350) 234
DURA (351) 220
ASSIGN (352) 77 265
XOR (353) 254
LESS (354) 243
GREATER (355) 244
INT (356) 11
SHORT (357) 10
LONG (358) 12
FLOAT (359) 13
DOUBLE (360) 14
CHAR (361) 8
BYTE (362) 9
IDENTIFIER (363) 35 36 39 40 41 42 43 44 45 46 95 104 105 127 146 148
    160 177 178
INTEGER_VALUE (364)
LONG_VALUE (365)
N_ID (366)
FLOAT_VALUE (367)
CHAR_VALUE (368)
STRING_VALUE (369)
BOOLLIT (370) 171
LITERAL (371) 170
e1 (372)
ELSE (373) 132


Nonterminals, with rules where they appear

$accept (119)
    on left: 0
TypeSpecifier (120)
    on left: 1 2, on right: 72 73 84 85 86 87 93 94 116 117 160 161
    247
TypeName (121)
    on left: 3 4, on right: 1 2 108 109 200 201 202 203 204
ClassNameList (122)
    on left: 5 6, on right: 6 61 97
PrimitiveType (123)
    on left: 7 8 9 10 11 12 13 14 15, on right: 3 181 228 229
SemiColons (124)
    on left: 16 17, on right: 17 26 30 33 34 65
CompilationUnit (125)
    on left: 18, on right: 0
ProgramFile (126)
    on left: 19 20 21 22 23 24 25, on right: 18
PackageStatement (127)
    on left: 26, on right: 19 20 21 23
TypeDeclarations (128)
    on left: 27 28, on right: 19 21 22 25 28
TypeDeclarationOptSemi (129)
    on left: 29 30, on right: 27 28
ImportStatements (130)
    on left: 31 32, on right: 19 20 22 24 32
ImportStatement (131)
    on left: 33 34, on right: 31 32
QualifiedName (132)
    on left: 35 36, on right: 4 5 6 26 33 34 36 163 175 179 180 186
    193 230
TypeDeclaration (133)
    on left: 37 38, on right: 29 30 71
ClassHeader (134)
    on left: 39 40 41 42 43 44 45 46, on right: 37 38
Modifiers (135)
    on left: 47 48, on right: 39 40 41 43 48 72 84 85 100 101
Modifier (136)
    on left: 49 50 51 52 53 54 55 56 57 58, on right: 47 48
ClassWord (137)
    on left: 59 60, on right: 39 40 41 42 43 44 45 46
Interfaces (138)
    on left: 61, on right: 39 41 42 45
FieldDeclarations (139)
    on left: 62 63, on right: 37 63 199
FieldDeclarationOptSemi (140)
    on left: 64 65, on right: 62 63
FieldDeclaration (141)
    on left: 66 67 68 69 70 71, on right: 64 65
FieldVariableDeclaration (142)
    on left: 72 73, on right: 66
VariableDeclarators (143)
    on left: 74 75, on right: 72 73 75 116 117
VariableDeclarator (144)
    on left: 76 77, on right: 74 75
VariableInitializer (145)
    on left: 78 79 80, on right: 77 81 82
ArrayInitializers (146)
    on left: 81 82 83, on right: 80 82 83 198
MethodDeclaration (147)
    on left: 84 85 86 87, on right: 67
MethodDeclarator (148)
    on left: 88 89 90, on right: 84 85 86 87 90
ParameterList (149)
    on left: 91 92, on right: 88 92 104
Parameter (150)
    on left: 93 94, on right: 91 92
DeclaratorName (151)
    on left: 95 96, on right: 76 77 88 89 93 94 96
Throws (152)
    on left: 97, on right: 84 86 100 102
MethodBody (153)
    on left: 98 99, on right: 84 85 86 87
ConstructorDeclaration (154)
    on left: 100 101 102 103, on right: 68
ConstructorDeclarator (155)
    on left: 104 105, on right: 100 101 102 103
StaticInitializer (156)
    on left: 106, on right: 69
NonStaticInitializer (157)
    on left: 107, on right: 70
Extends (158)
    on left: 108 109, on right: 39 40 42 44 109
Block (159)
    on left: 110 111, on right: 98 100 101 102 103 106 107 125 133
    154 155 156 159 162
LocalVariableDeclarationsAndStatements (160)
    on left: 112 113, on right: 110 113
LocalVariableDeclarationOrStatement (161)
    on left: 114 115, on right: 112 113
LocalVariableDeclarationStatement (162)
    on left: 116 117, on right: 114 139
Statement (163)
    on left: 118 119 120 121 122 123 124 125, on right: 115 131 132
    134 135 136 137 153
EmptyStatement (164)
    on left: 126, on right: 118
LabelStatement (165)
    on left: 127 128 129, on right: 119
ExpressionStatement (166)
    on left: 130, on right: 120 144 145
SelectionStatement (167)
    on left: 131 132 133, on right: 121
IterationStatement (168)
    on left: 134 135 136 137, on right: 122
ForInit (169)
    on left: 138 139 140, on right: 136 137
ForExpr (170)
    on left: 141 142, on right: 136 137
ForIncr (171)
    on left: 143, on right: 136
ExpressionStatements (172)
    on left: 144 145, on right: 138 143 145
JumpStatement (173)
    on left: 146 147 148 149 150 151 152, on right: 123
GuardingStatement (174)
    on left: 153 154 155 156, on right: 124
Catches (175)
    on left: 157 158, on right: 155 156 158
Catch (176)
    on left: 159, on right: 157 158
CatchHeader (177)
    on left: 160 161, on right: 159
Finally (178)
    on left: 162, on right: 154 156
PrimaryExpression (179)
    on left: 163 164, on right: 210
NotJustName (180)
    on left: 165 166 167, on right: 164 177
ComplexPrimary (181)
    on left: 168 169, on right: 167 176
ComplexPrimaryNoParenthesis (182)
    on left: 170 171 172 173 174, on right: 169 184
ArrayAccess (183)
    on left: 175 176, on right: 172
FieldAccess (184)
    on left: 177 178 179 180 181, on right: 173
MethodCall (185)
    on left: 182 183, on right: 174
MethodAccess (186)
    on left: 184 185 186, on right: 182 183
SpecialName (187)
    on left: 187 188 189, on right: 165 185
ArgumentList (188)
    on left: 190 191, on right: 182 191 200
NewAllocationExpression (189)
    on left: 192 193, on right: 166
PlainNewAllocationExpression (190)
    on left: 194 195 196 197 198 199, on right: 192 193
ClassAllocationExpression (191)
    on left: 200 201, on right: 195 197 199
ArrayAllocationExpression (192)
    on left: 202 203 204, on right: 194 196 198
DimExprs (193)
    on left: 205 206, on right: 202 203 206
DimExpr (194)
    on left: 207, on right: 205 206
Dims (195)
    on left: 208 209, on right: 2 202 204 209 229 230
PostfixExpression (196)
    on left: 210 211, on right: 212 213 218
RealPostfixExpression (197)
    on left: 212 213, on right: 178 211
UnaryExpression (198)
    on left: 214 215 216 217, on right: 214 215 219 224 264
LogicalUnaryExpression (199)
    on left: 218 219, on right: 217 227
LogicalUnaryOperator (200)
    on left: 220 221, on right: 219
ArithmeticUnaryOperator (201)
    on left: 222 223, on right: 216
CastExpression (202)
    on left: 224 225 226 227, on right: 216 225 226 231 232 233 234
PrimitiveTypeExpression (203)
    on left: 228 229, on right: 225
ClassTypeExpression (204)
    on left: 230, on right: 226
MultiplicativeExpression (205)
    on left: 231 232 233 234, on right: 232 233 234 235 236 237
AdditiveExpression (206)
    on left: 235 236 237, on right: 236 237 238 239 240 241
ShiftExpression (207)
    on left: 238 239 240 241, on right: 239 240 241 242 243 244 245
    246
RelationalExpression (208)
    on left: 242 243 244 245 246 247, on right: 243 244 245 246 247
    248 249 250
EqualityExpression (209)
    on left: 248 249 250, on right: 249 250 251 252
AndExpression (210)
    on left: 251 252, on right: 252 253 254
ExclusiveOrExpression (211)
    on left: 253 254, on right: 254 255 256
InclusiveOrExpression (212)
    on left: 255 256, on right: 256 257 258
ConditionalAndExpression (213)
    on left: 257 258, on right: 258 259 260
ConditionalOrExpression (214)
    on left: 259 260, on right: 260 261 262
ConditionalExpression (215)
    on left: 261 262, on right: 262 263 278
AssignmentExpression (216)
    on left: 263 264, on right: 264 277
AssignmentOperator (217)
    on left: 265 266 267 268 269 270 271 272 273 274 275 276,
    on right: 264
Expression (218)
    on left: 277, on right: 78 130 131 132 133 134 135 141 150 152
    153 168 175 176 190 191 207 227 262
ConstantExpression (219)
    on left: 278, on right: 128


state 0

    0 $accept: . CompilationUnit $end

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    IMPORT        shift, and go to state 4
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PACKAGE       shift, and go to state 7
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    CompilationUnit         go to state 15
    ProgramFile             go to state 16
    PackageStatement        go to state 17
    TypeDeclarations        go to state 18
    TypeDeclarationOptSemi  go to state 19
    ImportStatements        go to state 20
    ImportStatement         go to state 21
    TypeDeclaration         go to state 22
    ClassHeader             go to state 23
    Modifiers               go to state 24
    Modifier                go to state 25
    ClassWord               go to state 26


state 1

   49 Modifier: ABSTRACT .

    $default  reduce using rule 49 (Modifier)


state 2

   59 ClassWord: CLASS .

    $default  reduce using rule 59 (ClassWord)


state 3

   50 Modifier: FINAL .

    $default  reduce using rule 50 (Modifier)


state 4

   33 ImportStatement: IMPORT . QualifiedName SemiColons
   34                | IMPORT . QualifiedName POINT MULT SemiColons

    IDENTIFIER  shift, and go to state 27

    QualifiedName  go to state 28


state 5

   60 ClassWord: INTERFACE .

    $default  reduce using rule 60 (ClassWord)


state 6

   57 Modifier: NATIVE .

    $default  reduce using rule 57 (Modifier)


state 7

   26 PackageStatement: PACKAGE . QualifiedName SemiColons

    IDENTIFIER  shift, and go to state 27

    QualifiedName  go to state 29


state 8

   53 Modifier: PRIVATE .

    $default  reduce using rule 53 (Modifier)


state 9

   52 Modifier: PROTECTED .

    $default  reduce using rule 52 (Modifier)


state 10

   51 Modifier: PUBLIC .

    $default  reduce using rule 51 (Modifier)


state 11

   54 Modifier: STATIC .

    $default  reduce using rule 54 (Modifier)


state 12

   58 Modifier: SYNCHRONIZED .

    $default  reduce using rule 58 (Modifier)


state 13

   55 Modifier: TRANSIENT .

    $default  reduce using rule 55 (Modifier)


state 14

   56 Modifier: VOLATILE .

    $default  reduce using rule 56 (Modifier)


state 15

    0 $accept: CompilationUnit . $end

    $end  shift, and go to state 30


state 16

   18 CompilationUnit: ProgramFile .

    $default  reduce using rule 18 (CompilationUnit)


state 17

   19 ProgramFile: PackageStatement . ImportStatements TypeDeclarations
   20            | PackageStatement . ImportStatements
   21            | PackageStatement . TypeDeclarations
   23            | PackageStatement .

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    IMPORT        shift, and go to state 4
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 23 (ProgramFile)

    TypeDeclarations        go to state 31
    TypeDeclarationOptSemi  go to state 19
    ImportStatements        go to state 32
    ImportStatement         go to state 21
    TypeDeclaration         go to state 22
    ClassHeader             go to state 23
    Modifiers               go to state 24
    Modifier                go to state 25
    ClassWord               go to state 26


state 18

   25 ProgramFile: TypeDeclarations .
   28 TypeDeclarations: TypeDeclarations . TypeDeclarationOptSemi

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 25 (ProgramFile)

    TypeDeclarationOptSemi  go to state 33
    TypeDeclaration         go to state 22
    ClassHeader             go to state 23
    Modifiers               go to state 24
    Modifier                go to state 25
    ClassWord               go to state 26


state 19

   27 TypeDeclarations: TypeDeclarationOptSemi .

    $default  reduce using rule 27 (TypeDeclarations)


state 20

   22 ProgramFile: ImportStatements . TypeDeclarations
   24            | ImportStatements .
   32 ImportStatements: ImportStatements . ImportStatement

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    IMPORT        shift, and go to state 4
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    $default  reduce using rule 24 (ProgramFile)

    TypeDeclarations        go to state 34
    TypeDeclarationOptSemi  go to state 19
    ImportStatement         go to state 35
    TypeDeclaration         go to state 22
    ClassHeader             go to state 23
    Modifiers               go to state 24
    Modifier                go to state 25
    ClassWord               go to state 26


state 21

   31 ImportStatements: ImportStatement .

    $default  reduce using rule 31 (ImportStatements)


state 22

   29 TypeDeclarationOptSemi: TypeDeclaration .
   30                       | TypeDeclaration . SemiColons

    SEMICOLON  shift, and go to state 36

    $default  reduce using rule 29 (TypeDeclarationOptSemi)

    SemiColons  go to state 37


state 23

   37 TypeDeclaration: ClassHeader . OPEN_D FieldDeclarations CLOSE_D
   38                | ClassHeader . OPEN_D CLOSE_D

    OPEN_D  shift, and go to state 38


state 24

   39 ClassHeader: Modifiers . ClassWord IDENTIFIER Extends Interfaces
   40            | Modifiers . ClassWord IDENTIFIER Extends
   41            | Modifiers . ClassWord IDENTIFIER Interfaces
   43            | Modifiers . ClassWord IDENTIFIER
   48 Modifiers: Modifiers . Modifier

    ABSTRACT      shift, and go to state 1
    CLASS         shift, and go to state 2
    FINAL         shift, and go to state 3
    INTERFACE     shift, and go to state 5
    NATIVE        shift, and go to state 6
    PRIVATE       shift, and go to state 8
    PROTECTED     shift, and go to state 9
    PUBLIC        shift, and go to state 10
    STATIC        shift, and go to state 11
    SYNCHRONIZED  shift, and go to state 12
    TRANSIENT     shift, and go to state 13
    VOLATILE      shift, and go to state 14

    Modifier   go to state 39
    ClassWord  go to state 40


state 25

   47 Modifiers: Modifier .

    $default  reduce using rule 47 (Modifiers)


state 26

   42 ClassHeader: ClassWord . IDENTIFIER Extends Interfaces
   44            | ClassWord . IDENTIFIER Extends
   45            | ClassWord . IDENTIFIER Interfaces
   46            | ClassWord . IDENTIFIER

    IDENTIFIER  shift, and go to state 41


state 27

   35 QualifiedName: IDENTIFIER .

    $default  reduce using rule 35 (QualifiedName)


state 28

   33 ImportStatement: IMPORT QualifiedName . SemiColons
   34                | IMPORT QualifiedName . POINT MULT SemiColons
   36 QualifiedName: QualifiedName . POINT IDENTIFIER

    SEMICOLON  shift, and go to state 36
    POINT      shift, and go to state 42

    SemiColons  go to state 43


state 29

   26 PackageStatement: PACKAGE QualifiedName . SemiColons
   36 QualifiedName: QualifiedName . POINT IDENTIFIER

    SEMICOLON  shift, and go to state 36
    POINT      shift, and go to state 44

    SemiColons  go to state 45


state 30

    0 $accept: CompilationUnit $end .

    $default  accept


state 31

   21 ProgramFile: PackageStatement TypeDeclarations .
   28 TypeDeclarations: TypeDeclarations . TypeDeclarationOptSemi
